--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -7,8 +7,8 @@ html
     meta(name='keywords', content='')
     // JS 
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
-    script(src='http://code.highcharts.com/stock/highstock.js')
-    script(src='http://code.highcharts.com/stock/modules/exporting.js')
+    script(src='js/highstock.js')
+    script(src='js/exporting.js')
 
     // CSS 
     link(rel='stylesheet', href='css/reset.css')
