--- a/views/index.jade
+++ b/views/index.jade
@@ -35,10 +35,12 @@ html
                 li#phoneimg0.images
                   img(src='img/twilight_tango_screenshot.png')
                 li#phoneimg1.images
-                  img(src='img/twilight_tango_screenshot.png')
+                  img(src='img/jetpack_jamboree_screenshot.png')
                 li#phoneimg2.images
                   img(src='img/twilight_tango_screenshot.png')
                 li#phoneimg3.images
+                  img(src='img/jetpack_jamboree_screenshot.png')
+                li#phoneimg4.images
                   img(src='img/twilight_tango_screenshot.png')
           #div
             #text
