--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -9,6 +9,7 @@ html
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
     script(src='js/highstock.js')
     script(src='js/exporting.js')
+    script(src='js/bootstrap.js')
 
     // CSS 
     link(rel='stylesheet', href='css/reset.css')
@@ -18,6 +19,8 @@ html
       link(rel='stylesheet', type='text/css', href='css/ie.css')
     // Google Web Font
     link(href='http://fonts.googleapis.com/css?family=Anton&subset=latin-ext,latin', rel='stylesheet', type='text/css')
+    // Twitter Bootstrap
+    link(href='css/bootstrap.css', rel='stylesheet', media='screen')
 
   body
     #wrapper
@@ -25,18 +28,37 @@ html
         #head
 
       #middle
-        .inner.inner-margin_top
-          .charts
-            h2 daily
-            #goldspent
-            #totalplays
-            #uniqueusers
+        ul#myPills.nav.nav-pills
+          li.active
+            a(href='#daily') Daily
+          li
+            a(href='#hourly') Hourly
 
+        .pill-content
+          #daily.pill-pane.active
+            h2 daily
+            .chart
+              #goldspent
+            .chart
+              #totalplays
+            .chart
+              #uniqueusers
+          #hourly.pill-pane
             h2 hourly
-            #numconnections
+            .chart
+              #numconnections
+              
 
   script(type='text/javascript')
     $(function() {
+
+      $('#myPills a:first').tab('show');
+
+      $('#myPills a').click(function (e) {
+        e.preventDefault();
+        $(this).tab('show');
+      });
+
       var goldSpentUrl = 'http://localhost:8080/chart/dailystat?metric=goldSpent';
 
       $.getJSON(goldSpentUrl, function(data) {
