--- a/views/metrics.jade
+++ b/views/metrics.jade
@@ -54,7 +54,7 @@ html
 
       $('#myPills a:first').tab('show');
 
-      var goldSpentUrl = 'http://localhost/chart/dailystat?metric=goldSpent';
+      var goldSpentUrl = '/chart/dailystat?metric=goldSpent';
 
       $.getJSON(goldSpentUrl, function(data) {
         // Create the chart
@@ -93,7 +93,7 @@ html
       var games = ['twilight_tango', 'jetpack_jamboree', 'fishing_frenzy'],
           colors = Highcharts.getOptions().colors;
 
-      var totalPlaysBaseUrl = 'http://localhost/chart/gamestat?metric=totalPlays',
+      var totalPlaysBaseUrl = '/chart/gamestat?metric=totalPlays',
           totalPlaysSeriesOptions = [],
           totalPlaysSeriesCounter = 0;
       
@@ -149,7 +149,7 @@ html
         });
       }
 
-      var uniqueUsersBaseUrl = 'http://localhost/chart/gamestat?metric=uniqueUsers',
+      var uniqueUsersBaseUrl = '/chart/gamestat?metric=uniqueUsers',
           uniqueUsersSeriesOptions = [],
           uniqueUsersSeriesCounter = 0;
       
@@ -215,7 +215,7 @@ html
       $(pill_hourly).click(function(e) {
         e.preventDefault();
 
-        var numConnectionsUrl = 'http://localhost/chart/hourlystat?metric=numConnections';
+        var numConnectionsUrl = '/chart/hourlystat?metric=numConnections';
 
         $.getJSON(numConnectionsUrl, function(data) {
           // Create the chart
